2006-??-?? : 1.2
	neko:
		added linker : provide linked versions of neko & nekoml compilers
		added tail calls optimization
	nekoml:
		little improved nekoml->neko patterns generator
	libs:
		added md5 digest , utf8 api and base_encode/base_decode in std
		some changes in mod_neko api
		mysql api now threat tinyint(1) as booleans
		improved xml parser : support for doctype
		some fixes for OSX and C++ compilation
	nekovm:
		experimental jit support
		moved args from builtin ($args) to loader ($loader.args)
		makeboot can create standalone binaries
		runtime errors on :
			- calls with invalid number of arguments
			- field accesses of not-an-object
			- binary operations on invalid types
			- array accesses on not-an-array and not-an-object
	license change : from GPL to LGPL	

2005-11-10 : 1.1
	vm : 
		ports PPC (big endian) and AMD64
		added stack conservation check at bytecode loadtime : faster VM runtime
		some more opcodes for better speed
		added exception and call stack traces
		added debug informations for bytecode
		added dispatch tables (for integer switchs)
		tuned GC usage
		reorganized VM apis
	neko:
		added labels in the language specification 
		added $goto and $apply 
		added switchs
		added documentation generator
	nekoml:
		added NekoML
		bootstrapped the language (no more need for ocaml)
	libs:
		rewrote and completed standard library
		added generated documentation

2005-08-17 : 1.0
	compiler in ocaml
	virtual machine
	mod_neko
	some small libraries