@@ -44,7 +44,7 @@ libs = {
 cflags = $array("-O3","-fPIC");
 linkcmd = switch system { "BSD" => "ld" default => "gcc" };
 linkoptions = switch system { "Mac" => "-bundle -undefined dynamic_lookup -L../../bin -lneko" default => "-shared -L../../bin -lneko" };
-nekovm = switch system { "Windows" => "..\\bin\\nekovm" default => "../bin/nekovm" };
+nekovm = switch system { "Windows" => "..\\bin\\neko" default => "../bin/neko" };
 
 // COMMANDS
 
@@ -221,13 +221,13 @@ try { mkdir(base,rights); } catch e { };
 
 // compile some neko sources
 
-exec(nekovm+" neko tools/test.neko");
+exec(nekovm+" nekoc tools/test.neko");
 copy("tools/test.n",base);
 
-exec(nekovm+" neko tools/nekoboot.neko");
+exec(nekovm+" nekoc tools/nekoboot.neko");
 copy("tools/nekoboot.n",base);
 
-exec(nekovm+" neko mtypes/std.neko");
+exec(nekovm+" nekoc mtypes/std.neko");
 try { mkdir(base+"/mtypes",rights); } catch e { };
 copy("mtypes/std.n",base+"/mtypes");
 
